# air-combat-gym

./: LICENSE  README.md  pyproject.toml
air_combat_gym/: __init__.py
air_combat_gym/envs/: __init__.py  adversary_random.py  base.py  base_multi.py  dogfight_1v1.py  dogfight_1vn.py  pretrained_opponent.py  registry.py  self_play.py  target_circular.py
air_combat_gym/models/: __init__.py  aircraft_3dof.py
air_combat_gym/rendering/: __init__.py  renderer.py
examples/: example_run.py
