[project]
name = "air-combat-gym"
version = "0.1.0"
description = "3-DoF air combat Gymnasium environments for reinforcement learning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ferhat Yurdakul" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
]

[project.optional-dependencies]
render = ["pygame>=2.5"]
sb3 = ["stable-baselines3>=2.3"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["air_combat_gym*"]
